postgresql-common (202) UNRELEASED; urgency=medium

  * pg_ctlcluster: Close extra log filedescriptor. Thanks Andrey Borodin!
    (Closes: #930728)
  * pg_virtualenv: Disable fakeroot while creating clusters so we don't end up
    running as root.
  * t/135_pg_virtualenv.t: New test file.
  * gitlab/gitlab-ci.yml: Run blhc; fail on lintian errors.

 -- Christoph Berg <myon@debian.org>  Fri, 07 Jun 2019 14:46:05 +0200

postgresql-common (201) experimental; urgency=medium

  [ Christoph Berg ]
  * Disable ssl on older server versions. (Versions up to 9.1 support
    OpenSSL 1.0 only, which has been removed from Debian unstable.)
  * pg_upgrade: Fix 'sameuser' handling in pg_hba when upgrading from pre-8.4
    versions.
  * gitlab/gitlab-ci.yml: Ignore skipped tests, and packages without tests; install
    pristine-tar; install via dh_make_pgxs.
  * Move .gitlab-ci.yml to debian/gitlab-ci.yml; add buster and stretch,
  * remove jessie. (Not to be confused with gitlab/gitlab-ci.yml.)
  * dh_make_pgxs: Set debhelper compat level to 9, highest version supported
    by jessie and trusty.

  [ Andreas Hasenack ]
  * Set Ubuntu 19.10 default PostgreSQL version to 11.

 -- Christoph Berg <myon@debian.org>  Thu, 09 May 2019 10:02:05 +0200

postgresql-common (200) unstable; urgency=medium

  * pg_createcluster: Don't refuse explicit -p argument even when port is
    already in use. (Closes: #653870)
  * pg_createcluster: Override suggested cluster start command in initdb.
    (Closes: #872660)
  * pg_upgradecluster, t/052_upgrade_encodings.t: pg_dumpall 11 retains the
    database encoding, so switching encodings via dump-restore does not work
    anymore.
  * pg_upgradecluster: Deprecate 'replacement_sort_tuples' in version 11.
  * pg_upgradecluster: Migrate postgresql.auto.conf to new cluster.
    (Closes: #810615)
  * pg_ctlcluster: Die early if logfile is not available. (Closes: #891234)
  * pg_ctlcluster: Die early if pg_ctl cannot be found. (See: #918784)